// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb > renders basic case correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class=""></ol>
</nav>"
`;

exports[`Breadcrumb > renders with divider correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/">
        <!--v-if--><span class="">Home</span>
      </a><span role="presentation">|</span></li>
    <li class=""><a class="" aria-current="page" href="/about">
        <!--v-if--><span class="">About</span>
      </a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with divider slot correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/">
        <!--v-if--><span class="">Home</span>
      </a>Divider slot</li>
    <li class=""><a class="" aria-current="page" href="/about">
        <!--v-if--><span class="">About</span>
      </a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;
